tests/golden/type_errors/array_flat_map_callback_return.cd
flatMap([1], fun (value: number): number { return value; });
