tests/golden/type_errors/array_flat_map_callback_return.err
Type error at 1:35: function `<lambda>` expects return array, got number
  flatMap([1], fun (value: number): number { return value; });
                                    ^
